Add git workflow

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     </head>
     <body>
         <h1>Hello <span id="username">World!</span></h1>
-        <p>Welcome to my page</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reiciendis odit blanditiis voluptas dolorem rem qui incidunt repellendus exercitationem? Obcaecati, asperiores magnam! Velit asperiores tenetur quisquam dignissimos! Iusto, impedit dolor.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus deleniti aliquid ratione ipsum cumque id esse! Odio earum nemo modi in ipsam itaque officia. Quidem non ea accusantium quam est?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex vitae asperiores, atque incidunt omnis quaerat. Consectetur vitae culpa ipsum delectus quod! Neque voluptatem ea sed totam ullam eum repellendus numquam.</p>
+        <p>This is a basic git workflow</p>
+        <ol>
+            <li>Modify files in your working directory</li>
+            <li>Stage the files, adding snapshots to your staging area (git add)</li>
+            <li>Commit your changes. This takes the files as they are in the changing area and stores that snap shot permanently to your git directory (git commit -m "what you changed.</li>
+        </ol>
     </body>
 </html>
