--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="./style.css">
+        <script src="./script.js" defer></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>Hello Hai!</title>
@@ -13,7 +14,7 @@
         <ol>
             <li>Modify files in your working directory</li>
             <li>Stage the files, adding snapshots to your staging area (git add)</li>
-            <li>Commit your changes. This takes the files as they are in the changing area and stores that snap shot permanently to your git directory (git commit -m "what you changed.</li>
+            <li>Commit your changes. This takes the files as they are in the staging area and stores that snap shot permanently to your git directory ( git commit -m "what you changed" ).</li>
         </ol>
     </body>
 </html>
